# broker-ai

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  render.yaml
apps/api/: Dockerfile  README.md  docker-entrypoint.sh  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0d056e915fef_add_user_role_and_active.py  20260404_0001_phase0_initial.py  20260405_phase1_organization_user.py  20260405_phase2_crm_portfolio.py  20260405_phase3_client_profile.py  20260406_phase4_interactions.py  20260407_module52_leads_insured_audit.py  20260408_mvp_catalog_three_lines.py  20260409_trim_product_category_enum.py  20260410_remove_private_pension_product.py  20260411_remove_term_life_baseline_product.py  20260412_opportunity_product_54_fields.py  20260413_modules_56_59_insurer_catalog_intel.py  20260414_rename_auto_motor_display.py  20260415_batch_job_meta.py  20260415_documents_allow_duplicates.py  20260415_documents_metadata.py  20260415_documents_versioning.py  20260415_extraction_and_taxonomy.py  20260415_lead_parity_opportunity_party.py  20260416_campaign_kind_enum.py  20260417_client_import_batches.py  20260418_phase9_adequacy_batch.py  20260419_remove_lines_of_business.py  (+6 more)
apps/api/tests/: conftest.py  test_auth.py  test_client_import.py  test_client_import_headers.py  test_crm.py  test_db_url.py  test_documents.py  test_extraction_and_normalization.py  test_health.py  test_modules_56_59.py  test_org.py  test_phase9_adequacy_batch.py  test_storage_local.py
apps/ocr/: Dockerfile  pyproject.toml
(+165 files in other folders)
