[project]
name = "ai-copilot-ocr"
version = "0.1.0"
description = "OCR microservice for development (Tesseract + poppler)"
requires-python = ">=3.12,<3.13"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "python-multipart>=0.0.9",
  "pdf2image>=1.17.0",
  "pillow>=12.2.0",
  "pytesseract>=0.3.13",
]

[tool.ruff]
target-version = "py312"
line-length = 100
